--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "test:integration": "cross-env NODE_ENV=test jest --config jest-integration.config.js --runInBand --forceExit",
     "test:integration:cov": "npm run test:integration -- --coverage",
     "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js",
-    "migration:create": "npm run typeorm migration:create -- -d 'src/app/shared/database/migrations' -n",
     "migration:run": "node dist/scripts/scripts.js run",
     "migration:revert": "node dist/scripts/scripts.js revert"
   },
@@ -31,10 +30,13 @@
     "@nestjs/swagger": "^4.7.5",
     "@nestjs/terminus": "^7.0.1",
     "@nestjs/typeorm": "^7.1.5",
+    "@types/pizzip": "^3.0.1",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "cors": "^2.8.5",
+    "docxtemplater": "^3.19.7",
     "dotenv": "^8.2.0",
+    "ejs": "^3.1.5",
     "faker": "^5.1.0",
     "fs-extra": "^9.0.1",
     "helmet": "^4.2.0",
@@ -42,6 +44,7 @@
     "pg": "^8.5.1",
     "pino": "^6.7.0",
     "pino-pretty": "^4.3.0",
+    "pizzip": "^3.0.6",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3",
