--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "prebuild": "rimraf dist",
+    "prebuild": "rimraf ./dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"integration-tests/**/*.ts\"",
     "start": "nest start",
@@ -30,11 +30,9 @@
     "@nestjs/swagger": "^4.7.5",
     "@nestjs/terminus": "^7.0.1",
     "@nestjs/typeorm": "^7.1.5",
-    "@types/pizzip": "^3.0.1",
     "class-transformer": "^0.3.1",
     "class-validator": "^0.12.2",
     "cors": "^2.8.5",
-    "docxtemplater": "^3.19.7",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "faker": "^5.1.0",
@@ -44,7 +42,6 @@
     "pg": "^8.5.1",
     "pino": "^6.7.0",
     "pino-pretty": "^4.3.0",
-    "pizzip": "^3.0.6",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.3",
